--- a/AgileManagementSystem.Application/AgileManagementSystem.Application.csproj
+++ b/AgileManagementSystem.Application/AgileManagementSystem.Application.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <Folder Include="Dtos\" />
+    <Folder Include="Services\Auth\" />
     <Folder Include="Validators\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
