--- a/AgileManagementSystem.Infrastructure/AgileManagementSystem.Infrastructure.csproj
+++ b/AgileManagementSystem.Infrastructure/AgileManagementSystem.Infrastructure.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AgileManagementSystem.Core\AgileManagementSystem.Core.csproj" />
   </ItemGroup>
 
