--- a/AgileManagementSystem.Infrastructure/AgileManagementSystem.Infrastructure.csproj
+++ b/AgileManagementSystem.Infrastructure/AgileManagementSystem.Infrastructure.csproj
@@ -5,12 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AgileManagementSystem.Core\AgileManagementSystem.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Security\Hash\" />
   </ItemGroup>
 
 </Project>
