--- a/AgileManagementSystem.WebAPI/appsettings.json
+++ b/AgileManagementSystem.WebAPI/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "LocalDb": "Server=(LocalDB)\\MSSQLLocalDB;Database=AgileManagementDb;Trusted_Connection=true"
+  },
+  "JWT": {
+    "issuer": "https://localhost:5001", // yayýncý token yayýnlayan authorization server url
+    "audience": "https://localhost:3000", // token istedeðinde bulunan client
+    "signingKey": "x-secret-key-x-secret-key-x-secret-key" // access token'ýn þifrelenip oluþacaðý key
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
