Migration alındı. actionlara route tanımlandı.

--- a/AgileManagementSystem.WebAPI/appsettings.json
+++ b/AgileManagementSystem.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalDb": "Server=(LocalDB)\\MSSQLLocalDB;Database=AgileManagementDb;Trusted_Connection=true"
+    "LocalDb": "Server=DESKTOP-1AKBKH5;Database=AgileManagementDb;Trusted_Connection=true"
   },
   "JWT": {
     "issuer": "https://localhost:5001", // yayýncý token yayýnlayan authorization server url
