User register servis user verify servise Eventler

--- a/AgileManagementSystem.Application/AgileManagementSystem.Application.csproj
+++ b/AgileManagementSystem.Application/AgileManagementSystem.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Dtos\" />
+    <Folder Include="Services\Verify\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
